# ft_transcendence

./: .env.example  .env.exemple  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  scriptenv.sh  tmux.sh  tmux_launch.sh
infra/: docker-compose.yml
nginx/: Dockerfile  nginx.conf
sources/cli/: Cargo.toml
sources/cli/src/: main.rs  position.rs  size.rs
sources/cli/src/interface/: element.rs  lobby.rs  mod.rs  session.rs
sources/cli/src/interface/assets/: title.txt
sources/cli/src/interface/elements/: button.rs  error.rs  input.rs  mod.rs  text.rs
sources/cli/src/interface/screens/: home.rs  login.rs  mod.rs  multiplayer.rs
sources/cli/src/interface/screens/assets/: login.txt  multiplayer.txt  title.txt
sources/front/: .dockerignore  .env  .env.exemple  Dockerfile  db.json  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
sources/game/: .dockerignore  .env.exemple  .gitignore  Dockerfile  clients.py  matchTest.py  ownershipTest.py  package-lock.json  package.json  pnpm-lock.yaml  tournamentTest.py  tsconfig.json
sources/logic/: .env  .env.example  .gitignore  :wa  Dockerfile  package-lock.json  package.json  tsconfig.json
sources/nginx/: nginx.conf
sources/old_front/: db.json  index.html  package.json  tailwind.config.js  tsconfig.json
sources/user/: .dockerignore  .env.exemple  .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
ssl/: localhost.crt  localhost.key
(+286 files in other folders)
