[package]
name = "pong-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.31"
is_printable = "0.1.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
termion = "4.0.5"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
